--- a/wiki/PushButtonModule.wiki
+++ b/wiki/PushButtonModule.wiki
@@ -15,4 +15,5 @@ TODO:
     * udp broadcast for config data
     * save config in nvram
   * Maximum number of buttons + leds that can be attached to a Atmega328 ?
-    * is there a way to use a pin both for led output as push button input ?
+    * Arduino forum: example of using one analog pin to read 5 switches [http://www.arduino.cc/cgi-bin/yabb2/YaBB.pl?num=1226896251/0]
+    * Microchip AN234 application note [http://ww1.microchip.com/downloads/en/AppNotes/00234a.pdf]
