Edited wiki page through web user interface.

--- a/wiki/PushButtonModule.wiki
+++ b/wiki/PushButtonModule.wiki
@@ -17,3 +17,4 @@ TODO:
   * Maximum number of buttons + leds that can be attached to a Atmega328 ?
     * Arduino forum: example of using one analog pin to read 5 switches [http://www.arduino.cc/cgi-bin/yabb2/YaBB.pl?num=1226896251/0]
     * Microchip AN234 application note [http://ww1.microchip.com/downloads/en/AppNotes/00234a.pdf]
+    * Arduino tutorial: LED Driver [http://www.arduino.cc/en/Tutorial/LEDDriver]
